my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20001229-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20001229-1.c:42:3: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   42 |   exit (0);
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20001229-1.c:42:3: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
1 error generated.
